# persistent-brain

./: .antigravityignore.bak  .gitignore  .mcp.json  AGENTS.md  HANDOFF.md  Makefile  QUICKREF.md  README.md  _handoff_2026-04-26-phase2.md  _handoff_2026-04-26-phase4.md  _handoff_2026-04-26-phase5.md  _handoff_2026-04-26-phase6.md  _handoff_2026-04-26-phase7.md  _handoff_2026-04-26-v0.6.0.md  _handoff_2026-04-26-v0.6.1.md  _handoff_2026-04-26.md  install.sh  mempalace.yaml  pyproject.toml  uninstall.sh
.engram/: manifest.json
.github/workflows/: ci.yml  smoke.yml
config/: AGENTS.md  mcp-servers.json
docs/: agent-setup.md  api-reference.md  architecture.md  getting-started.md  routing-rules.md  sync-strategy.md  troubleshooting.md
docs/specs/: 2026-04-22-memory-improvement-plan.md
engram-chunks/: engram-10-agent-team.json
examples/: claude-code-setup.md  codex-setup.md  cursor-setup.md  kimi-k2-setup.md  opencode-setup.md  qwen-setup.md
hooks/: pre-commit.sh  pre-compact.sh  session-end.sh  session-start.sh
mempalace-export/: global-decisions.json
router/: auto_linker.py  brain_router.py  observation_validator.py  reasoning_tracker.py  session_manager.py
scripts/: auto-calibrate.py  brain-backfill-topickeys.sh  brain-cleanup.sh  brain-diagram.sh  brain-init.sh  brain-inspect.sh  brain-status.sh  brain-sync.sh
tests/: conftest.py  test_reasoning_tracker.py  test_router.py  test_session_manager.py  test_validator.py
