[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-brain"
version = "0.5.0"
description = "Unified persistent memory system for AI coding agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nicholas Householder"}
]
keywords = ["mcp", "memory", "agent", "ai", "codebase", "engram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
]

[project.scripts]
brain-router = "router.brain_router:main"

[project.urls]
Homepage = "https://github.com/nhouseholder/unified-brain"
Repository = "https://github.com/nhouseholder/unified-brain"
Issues = "https://github.com/nhouseholder/unified-brain/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["router*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["router"]
